almost login page design done

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +11,46 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
-    
+<body class="">
+
+
+    <header class="w-[50%] lg:w-[30%] mx-auto ">
+        <h1 class="h-[30px] rounded-b-lg bg-[rgb(136,12,167)]"></h1>
+    </header>
+
+    <main class="w-[50%] lg:w-[30%] mx-auto bg-white  p-4 text-black">
+        
+        <div class=" mt-10">
+            <p class="cursor-pointer px-4 py-2 mr-[10%] text-right mx-auto rounded-2xl border-2 border-[rgb(136,12,167)] w-fit">বাংলা</p>
+        </div>
+        <div class="text-center text-black mb-3">
+            <img class="w-fit mx-auto" src="assets/rocket tranperant logo.jpeg" alt="logo">
+            <p class="font-bold text-lg mb-2">Shakib Hasan</p>
+            <p><input class="p-2 w-[60%] rounded-2xl bg-[rgba(136,12,167,0.2)] text-center text-black mb-2" value="01780935181" type="text" placeholder="Phone Number"></p>
+            <p><input class="p-2 w-[60%] rounded-2xl bg-[rgba(136,12,167,0.2)]  text-center text-black mb-7" value="12345" type="text" placeholder="Password"></p>
+            <button class="text-lg text-white  p-2 w-[60%] rounded-2xl  bg-[rgb(136,12,167)]">Login</button>
+        </div>
+        <p class="text-right mr-[10%] font-bold text-black text-lg">Forgot Rocket PIN?</p>
+
+
+        <div class="flex justify-center gap-20 mt-40">
+            <div class="">
+                <p>img</p>
+                <p>Store locator</p>
+            </div>
+
+            <div>
+                <p>img</p>
+                <p>Help & Support</p>
+            </div>
+        </div>
+    </main>
+
+
+    <footer>
+
+    </footer>
+
+    <script src="js/logics.js"></script>
 </body>
 </html>
