login page design done

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 
         <div class="flex justify-center gap-20 mt-40">
             <div class="">
-                <p>img</p>
+                <p class="text-center text-2xl text-[rgb(136,12,167)]"><i class="fa-solid fa-location-dot"></i></p>
                 <p>Store locator</p>
             </div>
 
             <div>
-                <p>img</p>
+                <p class="text-center text-2xl text-[rgb(136,12,167)]"><i class="fa-solid fa-question"></i></p>
                 <p>Help & Support</p>
             </div>
         </div>
