login page design done

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <body class="">
 
 
-    <header class="w-[50%] lg:w-[30%] mx-auto ">
+    <header class="w-full md:w-[50%] lg:w-[25%] mx-auto ">
         <h1 class="h-[30px] rounded-b-lg bg-[rgb(136,12,167)]"></h1>
     </header>
 
-    <main class="w-[50%] lg:w-[30%] mx-auto bg-white  p-4 text-black">
+    <main class="w-full md:w-[50%] lg:w-[25%] mx-auto bg-white  p-4 text-black">
         
         <div class=" mt-10">
             <p class="cursor-pointer px-4 py-2 mr-[10%] text-right mx-auto rounded-2xl border-2 border-[rgb(136,12,167)] w-fit">বাংলা</p>
