bill pay section done

--- a/home.html
+++ b/home.html
@@ -164,6 +164,65 @@
             <img class="mx-auto w-full px-3" src="assets/main-section-banner.png" alt="main sectio banner">
         </section>
 
+
+
+        <!-- bill pay section  -->
+
+
+        <section class="px-2 mt-5 pb-8">
+            <h1 class="text-black font-bold pt-3 pl-2">Bill Pay</h1>
+
+
+            <div class="grid grid-cols-4 text-black gap-2 mt-5">
+            
+                <div class="flex flex-col items-center">
+                    <img class="mb-3" src="assets/bill-pay-assets/Education-logo.png" alt="Education logo">
+                    <p class="text-sm">Education</p>
+                </div>
+
+                <div class="flex flex-col items-center">
+                    <img class="mb-1" src="assets/bill-pay-assets/Electricity-logo.png" alt="Electricity logo">
+                    <p class="text-sm">Electricity</p>
+                </div>
+
+                <div class="flex flex-col items-center">
+                    <img class="mb-3" src="assets/bill-pay-assets/gas-logo.png" alt="Gas logo">
+                    <p class="text-sm">Gas</p>
+                </div>
+
+                <div class="flex flex-col items-center">
+                    <img class="mb-2" src="assets/bill-pay-assets/water-logo.png" alt="Water logo">
+                    <p class="text-sm">Water</p>
+                </div>
+
+
+                <div class="flex flex-col items-center">
+                    <img class="mb-2" src="assets/bill-pay-assets/govt-fee-logo.png" alt="Govt fee logo">
+                    <p class="text-sm">Govt Fee</p>
+                </div>
+
+
+                <div class="flex flex-col items-center">
+                    <img class="mb-2" src="assets/bill-pay-assets/Internet-logo.png" alt="Internet logo">
+                    <p class="text-sm">Internet</p>
+                </div>
+
+
+                <div class="flex flex-col items-center">
+                    <img class="mb-1" src="assets/bill-pay-assets/insurance-logo.png" alt="Insurance logo">
+                    <p class="text-sm">Insurance</p>
+                </div>
+
+
+                <div class="flex flex-col items-center">
+                    <img class="mb-2" src="assets/bill-pay-assets/bank-f1-logo.png" alt="bank f1 logo">
+                    <p class="text-sm">Bank & f1</p>
+                </div>
+          
+            </div>
+
+        </section>
+
     </main>
 
 
