--- a/home.html
+++ b/home.html
@@ -226,8 +226,21 @@
     </main>
 
 
-    <footer>
-        
+    <footer class="w-[92%] md:w-[50%] lg:w-[25%] mx-auto bg-white">
+        <div class="flex text-black justify-evenly items-center border">
+            <div class="flex flex-col items-center text-[rgb(136,12,167)]">
+                <p class="text-xl"><i class="fa-solid fa-house"></i></p>
+                <p>Home</p>
+            </div>
+            <div class="flex flex-col items-center">
+                <p class="text-xl"><i class="fa-solid fa-qrcode"></i></p>
+                <p>Scan QR</p>
+            </div>
+            <div class="flex flex-col items-center">
+                <p class="text-xl"><i class="fa-solid fa-ellipsis-vertical"></i></p>
+                <p>More</p>
+            </div>
+        </div>
     </footer>
 
 </body>
