--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <p class="font-bold text-lg mb-2">Shakib Hasan</p>
             <p><input class="p-2 w-[60%] rounded-2xl bg-[rgba(136,12,167,0.2)] text-center text-black mb-2" value="01780935181" type="text" placeholder="Phone Number"></p>
             <p><input class="p-2 w-[60%] rounded-2xl bg-[rgba(136,12,167,0.2)]  text-center text-black mb-7" value="12345" type="text" placeholder="Password"></p>
-            <button class="text-lg text-white  p-2 w-[60%] rounded-2xl  bg-[rgb(136,12,167)]">Login</button>
+            <button id="login-btn" class="text-lg text-white  p-2 w-[60%] rounded-2xl  bg-[rgb(136,12,167)]">Login</button>
         </div>
         <p class="text-right mr-[10%] font-bold text-black text-lg">Forgot Rocket PIN?</p>
 
