--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
 </head>
 <body class="text-white">
     
-    <header class="w-[92%] md:w-[50%] lg:w-[25%] mx-auto bg-[rgb(136,12,167)] pt-7 rounded-t-2xl px-4">
+    <header class="w-full md:w-[50%] lg:w-[25%] mx-auto bg-[rgb(136,12,167)] pt-7 rounded-t-2xl px-4">
         <div class="flex justify-between p-3">
 
             <div class="flex gap-2 items-center">
@@ -55,7 +55,7 @@
     </header>
 
 
-    <main class="w-[92%] md:w-[50%] lg:w-[25%] mx-auto bg-white">
+    <main class="w-full md:w-[50%] lg:w-[25%] mx-auto bg-white">
 
 
         <!-- services section  + update your profile-->
@@ -226,7 +226,7 @@
     </main>
 
 
-    <footer class="w-[92%] md:w-[50%] lg:w-[25%] mx-auto bg-white">
+    <footer class="w-full md:w-[50%] lg:w-[25%] mx-auto bg-white">
         <div class="flex text-black justify-evenly items-center border">
             <div class="flex flex-col items-center text-[rgb(136,12,167)]">
                 <p class="text-xl"><i class="fa-solid fa-house"></i></p>
