--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
     <header class="w-full md:w-[50%] lg:w-[25%] mx-auto ">
-        <h1 class="h-[30px] rounded-b-lg bg-[rgb(136,12,167)]"></h1>
+        <h1 class="h-[30px] bg-[rgb(136,12,167)]"></h1>
     </header>
 
     <main class="w-full md:w-[50%] lg:w-[25%] mx-auto bg-white  p-4 text-black">
