--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
 </head>
 <body class="text-white">
     
-    <header class="w-full md:w-[50%] lg:w-[25%] mx-auto bg-[rgb(136,12,167)] pt-7 rounded-t-2xl px-4">
+    <header class="w-full md:w-[50%] lg:w-[25%] mx-auto bg-[rgb(136,12,167)] pt-7 px-4">
         <div class="flex justify-between p-3">
 
             <div class="flex gap-2 items-center">
