--- a/home.html
+++ b/home.html
@@ -62,12 +62,12 @@
 
         <section class="bg-[rgb(136,12,167)] ">
 
-            <div class="bg-white pt-5 rounded-t-3xl px-2 ">
+            <div class="bg-white pt-5 rounded-t-3xl px-0 ">
 
                 <h1 class="text-black font-bold pt-3 pl-2">Services</h1>
 
 
-                <div class="grid grid-cols-4 text-black gap-2 mt-5">
+                <div class="grid grid-cols-4 text-black gap-1 mt-5">
                 
                     <div class="flex flex-col items-center">
                         <img class="mb-3" src="assets/send-money-logo.png" alt="send money logo">
@@ -76,7 +76,7 @@
 
                     <div class="flex flex-col items-center">
                         <img class="mb-3" src="assets/mobile-recharge-logo.png" alt="mobile recharge logo">
-                        <p class="text-sm">Mobile Recharge</p>
+                        <p class="text-[13px]">Mobile Recharge</p>
                     </div>
 
                     <div class="flex flex-col items-center">
@@ -104,13 +104,13 @@
 
                     <div class="flex flex-col items-center">
                         <img class="mb-1" src="assets/bank-transfer-logo.png" alt="bank transfer logo">
-                        <p class="text-sm">Bank transfer</p>
+                        <p class="text-[13px]">Bank transfer</p>
                     </div>
 
 
                     <div class="flex flex-col items-center">
                         <img class="mb-3" src="assets/Link-setup-logo.png" alt="Link setup logo">
-                        <p class="text-sm">Link A/C Setup</p>
+                        <p class="text-[13px]">Link A/C Setup</p>
                     </div>
 
 
