--- a/home.html
+++ b/home.html
@@ -71,7 +71,7 @@
                 
                     <div class="flex flex-col items-center">
                         <img class="mb-3" src="assets/send-money-logo.png" alt="send money logo">
-                        <p class="text-sm">Send Money</p>
+                        <p class="text-[13px]">Send Money</p>
                     </div>
 
                     <div class="flex flex-col items-center">
@@ -81,24 +81,24 @@
 
                     <div class="flex flex-col items-center">
                         <img class="mb-3" src="assets/cash-out-logo.png" alt="Cashout logo">
-                        <p class="text-sm">Cash Out</p>
+                        <p class="text-[13px]">Cash Out</p>
                     </div>
 
                     <div class="flex flex-col items-center">
                         <img class="mb-2" src="assets/Merchant-pay-logo.png" alt="Merchant pay logo">
-                        <p class="text-sm">Merchant Pay</p>
+                        <p class="text-[13px]">Merchant Pay</p>
                     </div>
 
 
                     <div class="flex flex-col items-center">
                         <img class="mb-3" src="assets/add-money-logo.png" alt="Add money logo">
-                        <p class="text-sm">Add Money</p>
+                        <p class="text-[13px]">Add Money</p>
                     </div>
 
 
                     <div class="flex flex-col items-center">
                         <img class="mb-1" src="assets/bill-pay-logo.png" alt="Bill Pay logo">
-                        <p class="text-sm">Bill Pay</p>
+                        <p class="text-[13px]">Bill Pay</p>
                     </div>
 
 
@@ -116,25 +116,25 @@
 
                     <div class="flex flex-col items-center">
                         <img class="mb-2" src="assets/binimoy-logo.png" alt="Binimoy logo">
-                        <p class="text-sm">Binimoy</p>
+                        <p class="text-[13px]">Binimoy</p>
                     </div>
 
                     <div class="flex flex-col items-center">
                         <img class="mb-3" src="assets/e-toll-logo.png" alt="e toll logo">
-                        <p class="text-sm">e-Toll</p>
+                        <p class="text-[13px]">e-Toll</p>
 
                     </div>
 
 
                     <div class="flex flex-col items-center">
                         <img class="mb-1" src="assets/donation-logo.png" alt="Donation logo">
-                        <p class="text-sm">Donation</p>
+                        <p class="text-[13px]">Donation</p>
                     </div>
 
 
                     <div class="flex flex-col items-center">
                         <img class="mb-2" src="assets/pension-logo.png" alt="Pension logo">
-                        <p class="text-sm">Pension</p>
+                        <p class="text-[13px]">Pension</p>
                     </div>
 
 
