--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <div class="text-center text-black mb-3">
             <img class="w-fit mx-auto" src="assets/rocket tranperant logo.jpeg" alt="logo">
             <p class="font-bold text-lg mb-2">Shakib Hasan</p>
-            <p><input class="p-2 w-[60%] rounded-2xl bg-[rgba(136,12,167,0.2)] text-center text-black mb-2" value="01780935181" type="text" placeholder="Phone Number"></p>
-            <p><input class="p-2 w-[60%] rounded-2xl bg-[rgba(136,12,167,0.2)]  text-center text-black mb-7" value="12345" type="text" placeholder="Password"></p>
+            <p><input id="phone-number" class="p-2 w-[60%] rounded-2xl bg-[rgba(136,12,167,0.2)] text-center text-black mb-2" value="01780935181" type="text" placeholder="Phone Number"></p>
+            <p><input id="pin" class="p-2 w-[60%] rounded-2xl bg-[rgba(136,12,167,0.2)]  text-center text-black mb-7" value="12345" type="text" placeholder="Password"></p>
             <button id="login-btn" class="text-lg text-white  p-2 w-[60%] rounded-2xl  bg-[rgb(136,12,167)]">Login</button>
         </div>
         <p class="text-right mr-[10%] font-bold text-black text-lg">Forgot Rocket PIN?</p>
@@ -51,6 +51,7 @@
 
     </footer>
 
-    <script src="js/logics.js"></script>
+    <script src="js/data.js"></script>
+    <script src="js/home.js"></script>
 </body>
 </html>
