dynamic username and phone num

--- a/home.html
+++ b/home.html
@@ -24,8 +24,8 @@
                 </div>
     
                 <div>
-                    <p>Shakib Hasan</p>
-                    <p class="text-sm">01780935181,GENERAL_CONSUMER</p>
+                    <p id="user-name"></p>
+                    <p class="text-sm"><span id="phone-number"></span>,GENERAL_CONSUMER</p>
                 </div>
             </div>
          
@@ -242,6 +242,10 @@
             </div>
         </div>
     </footer>
+
+    <script src="js/data.js"></script>
+    <script src="js/functions.js"></script>
+    <script src="js/home.js"></script>
 
 </body>
 </html>
