--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
     </footer>
 
     <script src="js/data.js"></script>
-    <script src="js/home.js"></script>
+    <script src="js/functions.js"></script>
+    <script src="js/login.js"></script>
+    
+   
 </body>
 </html>
