--- a/test.html
+++ b/test.html
@@ -3,18 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Text Change with Spinner</title>
+    <style>
+        /* Styling the text container */
+        #text-container {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            font-size: 24px;
+            font-weight: bold;
+        }
 
-    
-        <!-- Tailwind CSS CDN -->
-        <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.23/dist/full.min.css" rel="stylesheet" type="text/css" />
-        <script src="https://cdn.tailwindcss.com"></script>
-        <!-- Font Awesome CDN -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+        /* Spinner styles */
+        .spinner {
+            display: inline-block;
+            width: 24px;
+            height: 24px;
+            border: 4px solid rgba(0, 0, 0, 0.1);
+            border-left-color: blue;
+            border-right-color: blue;
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+    </style>
 </head>
 <body>
-    <div class="w-64 h-64 bg-blue-500 flex items-center justify-center">
-        <img src="assets/png logo.png" alt="Rocket Logo" class="w-48 h-48">
-    </div>
-    
+
+    <div id="text-container">Old Text</div>
+
+    <button onclick="changeText()">Change Text</button>
+
+    <script>
+        function changeText() {
+            let textContainer = document.getElementById("text-container");
+
+            // Show spinner instead of text
+            textContainer.innerHTML = '<div class="spinner"></div>';
+
+            // Simulate loading time (e.g., fetching data)
+            setTimeout(() => {
+                // Change to new text
+                textContainer.innerText = "New Text!";
+            }, 2000); // 2 seconds delay
+        }
+    </script>
+
+</body>
 </html>
+
