added tap for balance

--- a/home.html
+++ b/home.html
@@ -44,7 +44,7 @@
 
             </div>
             <div id="balance" class="w-[57%] mx-auto cursor-pointer flex justify-center gap-4 bg-white px-12 py-2 rounded-2xl">
-                <p class="text-[rgb(136,12,167)] font-medium"><i class="fa-solid fa-bangladeshi-taka-sign"></i></p>
+                <p id="taka-sign" class="text-[rgb(136,12,167)] font-medium"><i class="fa-solid fa-bangladeshi-taka-sign"></i></p>
                 <div id="balance-text" class=" text-black font-medium ">Tap for Balance </div>
             </div>
             <div>
