added send money design

--- a/home.html
+++ b/home.html
@@ -70,7 +70,7 @@
 
                 <div class="grid grid-cols-4 text-black gap-1 mt-5">
                 
-                    <div class="flex flex-col items-center">
+                    <div id="send-money" class="cursor-pointer flex flex-col items-center">
                         <img class="mb-3" src="assets/send-money-logo.png" alt="send money logo">
                         <p class="text-[12px]">Send Money</p>
                     </div>
