--- a/html/services_section/send_money.html
+++ b/html/services_section/send_money.html
@@ -38,8 +38,8 @@
         <div class="border border-grey-800 shadow-lg  w-[90%] mx-auto bg-white mt-5 py-6 rounded-xl px-5">
             <p class="text-[rgb(136,12,167)] ">Recipient Mobile or A/C No</p>
 
-            <div class="flex justify-between items-center bg-gray-200 p-3 mt-3 rounded-3xl">
-                <div class="flex gap-4 items-center">
+            <div class="flex justify-between items-center bg-gray-200 p-3 mt-3 rounded-3xl mb-3">
+                <div class="flex gap-4 items-center ">
                     <p class="text-3xl"><i class="fa-solid fa-circle-user"></i></p>
                   
                     <input class="text-xl font-medium p-2 bg-gray-200" type="text" placeholder="Mobile or A/C No">
@@ -47,6 +47,13 @@
 
                 <p class="text-2xl"><i class="fa-solid fa-phone"></i></p>
             </div>
+
+            <div class=" flex justify-between mt-5 w-full text-white py-3 px-6 bg-[rgb(136,12,167)] rounded-3xl text-xl ">
+                <p></p>
+                <button class="">Next</button>
+                <p><i class="fa-solid fa-right-long"></i></p>
+            </div>
+           
         </div>
 
     </main>
