send money back btn

--- a/html/send_money.html
+++ b/html/send_money.html
@@ -19,7 +19,7 @@
     <header class="w-full md:w-[50%] lg:w-[25%] mx-auto bg-[rgb(136,12,167)] pt-8 rounded-t-xl px-5">
         <div class="text-white flex items-center gap-5 pb-6 text-2xl pt-3">
 
-            <button class=""><i class="fa-solid fa-arrow-left"></i></button>
+            <button id="send-money-back-btn" class=""><i class="fa-solid fa-arrow-left"></i></button>
             <p class="font-medium">Send Money</p>
 
         </div>
@@ -62,5 +62,8 @@
     <footer>
 
     </footer>
+
+    <script src="../js/send_money.js"></script>
+    
 </body>
 </html>
