--- a/home.html
+++ b/home.html
@@ -247,6 +247,7 @@
     <script src="js/data.js"></script>
     <script src="js/functions.js"></script>
     <script src="js/home.js"></script>
+    <script src="js/send_money.js"></script>
     
 
 </body>
