--- a/html/send_money.html
+++ b/html/send_money.html
@@ -31,6 +31,10 @@
             <p class="text-6xl mb-3 text-[rgb(136,12,167)]"><i class="fa-solid fa-qrcode"></i></p>
             <p class="text-xl font-medium">Scan QR</p>
         </div>
+        
+        <!-- qr code reader  -->
+        <div id="qr-reader" class="w-[300px] mx-auto"></div>
+        <div id="qr-result"></div>
 
         <p class="my-4 text-center text-xl font-medium">Or</p>
 
