--- a/html/send_money.html
+++ b/html/send_money.html
@@ -46,7 +46,7 @@
                 <div class="flex gap-4 justify-between items-center">
                     <p class="text-3xl w-[10%]"><i class="fa-solid fa-circle-user"></i></p>
                   
-                    <input id="send-money-acc-num" class="text-lg font-medium p-2 bg-gray-200" type="text" placeholder="Mobile or A/C No">
+                    <input id="send-money-acc-num" class="w-[80%] text-sm font-medium p-2 bg-gray-200" type="text" placeholder="Mobile or A/C No">
                     <p class="w-[10%] text-2xl"><i class="fa-solid fa-phone"></i></p>
                 </div>
 
