--- a/html/qrCodeScanner.html
+++ b/html/qrCodeScanner.html
@@ -15,7 +15,7 @@
     
     <section class="w-full md:w-[50%] lg:w-[25%] mx-auto ">
          <!-- qr code reader  -->
-         <div id="qr-reader" class="w-[300px] mx-auto"></div>
+         <div id="qr-reader" class="w-full mx-auto"></div>
          <div id="qr-result"></div>
     </section>
     <script src="https://unpkg.com/html5-qrcode"></script>
