--- a/html/confirm_send_money.html
+++ b/html/confirm_send_money.html
@@ -14,38 +14,68 @@
     <style>
         @keyframes fillAnimation {
             0% {
-                background: conic-gradient(#4f46e5 0deg, transparent 0deg);
+                background: conic-gradient(rgb(136,12,167) 0deg, transparent 0deg);
+            }
+            5% {
+                background: conic-gradient(rgb(136,12,167) 18deg, transparent 0deg);
             } 
             10% {
-                background: conic-gradient(#4f46e5 36deg, transparent 0deg);
+                background: conic-gradient(rgb(136,12,167) 36deg, transparent 0deg);
+            }
+            15% {
+                background: conic-gradient(rgb(136,12,167) 54deg, transparent 0deg);
             }
             20% {
-                background: conic-gradient(#4f46e5 72deg, transparent 0deg);
+                background: conic-gradient(rgb(136,12,167) 72deg, transparent 0deg);
+            }   
+            25% {
+                background: conic-gradient(rgb(136,12,167) 90deg, transparent 0deg);
             } 
             30% {
-                background: conic-gradient(#4f46e5 108deg, transparent 0deg);
+                background: conic-gradient(rgb(136,12,167) 108deg, transparent 0deg);
+            } 
+            35% {
+                background: conic-gradient(rgb(136,12,167) 126deg, transparent 0deg);
             } 
             40% {
-                background: conic-gradient(#4f46e5 144deg, transparent 0deg);
+                background: conic-gradient(rgb(136,12,167) 144deg, transparent 0deg);
+            } 
+            45% {
+                background: conic-gradient(rgb(136,12,167) 162deg, transparent 0deg);
             }
             50% {
-                background: conic-gradient(#4f46e5 180deg, transparent 0deg);
+                background: conic-gradient(rgb(136,12,167) 180deg, transparent 0deg);
+            } 
+            55% {
+                background: conic-gradient(rgb(136,12,167) 198deg, transparent 0deg);
             }
             60% {
-                background: conic-gradient(#4f46e5 216deg, transparent 0deg);
+                background: conic-gradient(rgb(136,12,167) 216deg, transparent 0deg);
+            }
+            65% {
+                background: conic-gradient(rgb(136,12,167) 234deg, transparent 0deg);
             }
             70% {
-                background: conic-gradient(#4f46e5 252deg, transparent 0deg);
+                background: conic-gradient(rgb(136,12,167) 252deg, transparent 0deg);
+            } 
+            75% {
+                background: conic-gradient(rgb(136,12,167) 270deg, transparent 0deg);
             }
             80% {
-                background: conic-gradient(#4f46e5 288deg, transparent 0deg);
+                background: conic-gradient(rgb(136,12,167) 288deg, transparent 0deg);
+            } 
+            85% {
+                background: conic-gradient(rgb(136,12,167) 306deg, transparent 0deg);
             }
             90% {
-                background: conic-gradient(#4f46e5 324deg, transparent 0deg);
+                background: conic-gradient(rgb(136,12,167) 324deg, transparent 0deg);
+            } 
+             95% {
+                background: conic-gradient(rgb(136,12,167) 342deg, transparent 0deg);
             }
           
             100% {
-                background: conic-gradient(#4f46e5 360deg, transparent 0deg);
+                background: conic-gradient(rgb(136,12,167) 360deg, transparent 0deg);
             }
         }
 
@@ -152,9 +182,9 @@
                 </div> -->
 
                 <!-- outer circle  -->
-                <div id="outerCircle" class="my-10 mx-auto relative w-40 h-40 rounded-full border-2 border-gray-500 flex items-center justify-center overflow-hidden">
+                <div id="outerCircle" class="my-10 mx-auto relative w-40 h-40 rounded-full border-2 border-[rgba(136,12,167,0.4)] flex items-center justify-center overflow-hidden">
                     <!-- Animated Fill Layer -->
-                    <div id="fillLayer" class="absolute inset-0 "></div>
+                    <div id="fillLayer" class="absolute inset-0"></div>
                     
                     <!-- Inner Circle -->
                     <div class="w-32 h-32 rounded-full border-2 border-blue-800 bg-white flex items-center justify-center relative z-10">
